--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "class-practic",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ann-yurchuk.github.io/class-practic/",
+  "homepage": "https://Ann-Yurchuk.github.io/class-practic/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
